--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.2",
+    "recoil": "^0.7.6",
+    "styled-components": "^5.3.6",
+    "styled-reset": "^4.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -23,6 +27,7 @@
     "@babel/preset-typescript": "^7.21.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "eslint": "^8.35.0",
@@ -32,7 +37,7 @@
     "prettier": "^2.8.4",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
-    "typescript": "^4.9.5",
+    "typescript": "^4.7.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
